
Changelog:
==========

v1.04

- Changes / Features

Spanish localization (thanks to Jose from www.playstationhoy.com), Dutch localization (thanks to VinceNL), German localization (thanks to Jeuki), Russian localization (thanks to Peter Klassen) and Swedish localization (thanks to Dusan Ilic)

- Fixes

Fixed regression with PicasaWeb images feed 

v1.03

- Changes / Features

Customize encoding parameters (along with default ones) for any given container/codec/property combination (purpose: A/V sync, playback issues, and tweaking for advanced users)
Ability to select networking interface
OSX 10.4 Tiger support (Intel only)
Settings reorganization
M4V now streamed by default, you have to enter the #Transcoded# folder to force the transcode (like AVI files)
WMA now transcoded by default
Italian localization
WINDOWS ONLY: Use (only with 720p/1080p H264 content) an experimental mencoder build for multicores : http://code.google.com/soc/2008/ffmpeg/appinfo.html?csaid=9FD2BF705A5D5DBB
New OSX icon (thanks to Jakob Karlsson)
Added a "Skip/Force transcode extensions" option added if default settings don't suit
Possibility to only remux AC3 audio tracks and not reencoded them

- Fixes

Default platform charset issue
Transcode buffer optimization on Windows
Application crash on Windows when too many widechars filenames were parsed
Audio tracks sorted by track number (if present) in media library
Better filenames/subtitles management (m2ts/ts/dvr-ms issues, comas, widechars, etc.)
External subtitles not always loaded, again
DVD images are listed in the media library
Fixed RSS parsing for Youtube and maybe other feeds
AviSynth / VideoLAN not always detected on Vista 64bits
Unavailable engines exclusion on OSX/Linux
Fixed console mode on Linux

v1.02.1

- New features

OSX build now uses Java 1.5 instead of 1.6 so it should be able to run on more macs

- Fixes

Major Bug in server start due to a faulty MAC address retrieval 