@@ -9,4 +9,5 @@ interface ProgramPaths {
 	String getTsmuxerPath();
 	String getFlacPath();
 	String getEac3toPath(); 
+	String getDCRaw(); 
 }
